# CI

./: CMakeLists.txt  Doxyfile  Doxyfile.in  main.h  main_test.cpp
.github/workflows/: build.yml  ci.yml  doxygen.yml  tests.yml
src/: main.cpp  mymath.cpp  mymath.hpp
test/: test_mymath.cpp
